src/test/deca/context/invalid/ident_not_declared.deca
// Test la règle 0.1: il n'y a pas de définition associée à l'identificateur
// de nom "variable" dans l'environnement.

{
    println("Ma variable préférée est", variable);
}

// Résultat:
//# DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:42) - verify program: start
//# DEBUG fr.ensimag.deca.tree.ListDeclClass.verifyListClass(ListDeclClass.java:28) - verify listClass: start
//# DEBUG fr.ensimag.deca.tree.ListDeclClass.verifyListClass(ListDeclClass.java:33) - verify listClass: end
//# DEBUG fr.ensimag.deca.tree.Main.verifyMain(Main.java:43) - verify Main: start
//# src/test/deca/context/invalid/ident_not_declared.deca:5:40: La variable "variable" n'a pas été déclaré : rule 0.1